--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,13 @@
 	color: #A3ACB3;
 	font-family: "roboto"
 }
+.description {
+	text-align: center;
+	border-bottom: 1px solid #A3ACB3;
+	padding: 45px 0;
+	vertical-align: middle;
+	color: #677A87;
+	font-size: 25px;
+	font-family: "roboto";
+}
+
