--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 .wrapper {
 	align-items: center;
-	border:1px solid #A3ACB3;
+	border:2px solid #EAEFF0;
 	border-top: 0;
 
 }
@@ -33,7 +33,7 @@
 }
 .description {
 	text-align: center;
-	border-bottom: 1px solid #A3ACB3;
+	border-bottom: 2px solid #EAEFF0;
 	padding: 45px 0;
 	vertical-align: middle;
 	color: #677A87;
