--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,13 @@
 	margin-right: 20px;
 	cursor: pointer;
 	display: none;
+	border: 1px solid #0704b7;
+	padding: 3px 3px;
 }
 .burger div {
-    width: 35px;
+    width: 45px;
     height: 5px;
-    background-color: black;
+    background-color: #0704b7;
     margin: 6px 0;
 }
 .nav a{
