--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,10 @@
 		display: block;
 	}
 	.container {
-		max-width: 1025px;
+		max-width: 800px;
+	}
+	.banner {
+		flex-direction: column;
 	}	
 }
 .description {
@@ -84,6 +87,7 @@
 	background-color: #F2F4F5;
 	margin-top: 50px;
 	align-items: center;
+
 }
 .banner-box {
 	margin-top: 24px;
