--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 .container {
 	max-width: 1280px;
 	margin:0 auto;
+
 }
 
 .border-box {
@@ -19,7 +20,7 @@
 .logo {
 	width: 150px;
 	margin-left: 15px;
-	top: 34px;
+	top: 25px;
     position: relative;
 }
 .right-block {
@@ -28,14 +29,13 @@
 }
 .burger {
 	cursor: pointer;
+	margin-right: 15px;
 	display: none;
 	width: 60px;
 	height: 60px;
 	position: relative;
 	border: 2px solid #00AF9C;
-	padding: 3px 3px;
 	background-color: #00AF9C;
-	vertical-align: middle;
 }
 .burger .line:first-child {
 	top: 30%;
@@ -72,7 +72,12 @@
 	}
 	.banner {
 		flex-direction: column;
-	}	
+	}
+	.info {
+		
+    flex-direction: column;
+}
+
 }
 .description {
 	text-align: center;
@@ -120,4 +125,26 @@
 	text-align: center;
 	text-decoration: none;
 	color: white;
+}
+
+.container.flex.info {
+	
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
+    width: 100%;
+}
+article {
+	background-color: #F2F4F5;
+	text-align: center;
+}
+article .title {
+	padding-top: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	color: #00AF9C;
+	font-size: 30px;
+}
+article p {
+	margin: 0 0 20px 0;
 }
