--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@
 		flex-direction: column;
 	}
 	.info {
-		
+
     flex-direction: column;
 }
 
@@ -137,11 +137,10 @@
 article {
 	background-color: #F2F4F5;
 	text-align: center;
+	flex-direction: column;
 }
 article .title {
-	padding-top: 20px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding: 20px;
 	color: #00AF9C;
 	font-size: 30px;
 }
