--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,8 @@
 	}
 	.info article {
 		width: 100%;
-		margin: 1% auto;
+		margin: 2% auto;
+		padding: 1%;
 	}
 
 }
@@ -136,9 +137,15 @@
 }
 .view a {
 	background-color: #00AF9C;
-	text-align: center;
-	text-decoration: none;
-	color: white;
+    position: relative;
+    left: 70px;
+    font-size: 20px;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    border: 2px solid #00AF9C;
+    border-radius: 5px
 }
 
 .container.flex.info {
