--- a/css/style.css
+++ b/css/style.css
@@ -179,19 +179,25 @@ article p {
 	width: 100%;
 	margin-top: 20px;
 	background-color: #33485F;
-	height: 180px;
+	max-height: 180px;
 	justify-content: center;
+
 }
 .footer-container {
-	max-width: 1170px;
-	height: inherit;
+	width: 1190px;
 	align-items: center;
 	background-color: #2A3B4E;
-	justify-content: center;
+	flex-direction: column;
+	position: relative;
 }
 .soc-icons {
 	width: 250px;
 	justify-content: space-around;
+	margin-top: 20px;
+	color: #fff;
+}
+.home {
+	border-bottom: dotted 1px #06BC9B;
 }
 .circle {
   border-radius: 50%;
@@ -199,6 +205,54 @@ article p {
   width: 35px;
   height: 35px;
 }
+.circle:nth-child(1) {
+	background-color:#3664a2;
+	}
+.circle:nth-child(2) {
+	background-color: #55acee;
+	}
+.circle:nth-child(3) {
+	background-color:#dd4b39;
+	}
+.circle:nth-child(4) {
+	background-color:#0077b5;
+	}
+.circle:hover {
+	background-color: #06BC9B;
+	cursor: pointer;
+}
+.menu {
+	margin-top: 3%;
+}
+.nav-footer {
+	justify-content: center;
+}
+.nav-footer li{
+	color: #fff;
+	margin-right: 10px;
+}
+.nav-footer a {
+	color: #fff;
+	text-decoration: none;
+	font-size: 16px;
+}
+.nav-footer a:hover {
+	color: #06BC9B;
+}
+.copy {
+	font-size: 12px;
+	color:#83909d;
+	margin-top: 10px;
+}
+.triangle-up {
+    width: 0;
+    height: 0;
+    border-left: 40px solid transparent;
+    border-right: 40px solid transparent;
+    border-bottom: 40px solid #06BC9B;
+    margin-top: 2%;
+}
+
 
 @media (max-width: 1025px){
 	.nav {
@@ -228,5 +282,7 @@ article p {
 		width: 90%;
     	left: 7.5%;
 	}
-
+	.nav-footer {
+		display: none;
+	}
 }
