--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,12 @@
 	position: relative;
 	top: 10px;
 }
+.nav-home{
+	color: #00AF9C !important;
+}
+.nav a:nth-child(1) {
+/*	color: #00AF9C;*/
+}
 
 .description {
 	text-align: center;
