--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ article p {
   background-color: white;
   width: 35px;
   height: 35px;
-  align-items: center;
+  text-align: center;
   line-height: 35px;
 }
 .circle:nth-child(1) {
@@ -230,7 +230,7 @@ article p {
 	cursor: pointer;
 }
 .menu {
-	margin-top: 3%;
+	margin-top: 10px;
 }
 .nav-footer {
 	justify-content: center;
@@ -258,7 +258,7 @@ article p {
     border-left: 40px solid transparent;
     border-right: 40px solid transparent;
     border-bottom: 40px solid #06BC9B;
-    margin-top: 2%;
+    margin-top: 5px;
 }
 
 
