--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+    max-width: 100%;
+    overflow: hidden;
+}
 .container {
 	max-width: 1170px;
 	margin:0 auto;
@@ -68,20 +72,18 @@
 .burger.active .line:nth-child(2) {
 	opacity: 0;
 }
-
+.Home {
+	color: #00AF9C !important;
+}
 .nav a{
 	text-decoration: none;
 	padding: 0 18px;
 	color: #525d68b3;
-	position: relative;
-	top: 10px;
-}
-.nav-home{
-	color: #00AF9C !important;
 }
 .nav a:hover {
 	color: #00AF9C;
 }
+
 
 .description {
 	text-align: center;
@@ -93,16 +95,25 @@
 }
 .banner {
 	background-color: #F2F4F5;
-	margin-top: 50px;
+	margin-top: 20px;
 	align-items: center;
-
+	position: relative;
 }
 .banner-box {
 	margin: 24px;
-    margin-bottom: 12px;
+	margin-bottom: 12px;
 }
-.img {
-	width: 680px;
+.z-index {
+	z-index: 10;
+	bottom: 10px;
+	position: absolute;
+}
+.planshet {
+    left: -30px;
+    width: 168px;
+}
+.mobile {
+    left: 590px;
 }
 .ban-text {
 	font-size: 30px;
@@ -291,6 +302,9 @@ article p {
     	left: 7.5%;
 	}
 	.nav-footer {
+		display: none;
+	}
+	.z-index {
 		display: none;
 	}
 }
