--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ html, body {
 	max-width: 1170px;
 	margin:0 auto;
 	padding: 0 15px;
-
 }
 .font {
 	font-family: 'Varela Round', sans-serif;
@@ -73,6 +72,31 @@ html, body {
 .burger.active .line:nth-child(2) {
 	opacity: 0;
 }
+nav .ul{
+  margin: 0;
+  padding: 0;
+  font-family: Open Sans;
+  list-style: none;
+  margin: 4em auto;
+  text-align: center
+}
+.hidden {
+   display: none;
+  }
+.a {
+    @include transition-duration(0.5s);
+    text-decoration: none;
+    color: black;
+    font-size: 3em;
+    line-height: 1.5;
+    width: 100%;
+    display: block;
+}
+      .a:hover {
+        background-color: rgba(0,0,0,0.5);
+      }
+    }
+}
 .Home {
 	color: #00AF9C !important;
 }
@@ -84,8 +108,6 @@ html, body {
 .nav a:hover {
 	color: #00AF9C;
 }
-
-
 .description {
 	text-align: center;
 	border-bottom: 2px solid #EAEFF0;
