--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,14 @@ html, body {
 nav .ul{
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: 'Varela Round', sans-serif;
+  text-transform: uppercase;
   list-style: none;
   margin: 4em auto;
-  text-align: center
+  text-align: center;
+  z-index: 1;
+  background-color: #00AF9C;
+  position: relative;
 }
 .hidden {
    display: none;
@@ -94,6 +98,7 @@ nav .ul{
 }
       .a:hover {
         background-color: rgba(0,0,0,0.5);
+        color: #fff;
       }
     }
 }
